[package]
name = "roulette"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rp-pico = "0.2.0"
cortex-m-rt = "0.7"
panic-halt = "0.2.0"
rp2040-boot2 = "0.2.0"
embedded-hal = { version = "0.2.5", features = ["unproven"] }
embedded-time = "0.12.0"
cortex-m = "0.7.2"
cortex-m-rtic = "1.0.0"     # Real-Time Interrupt-driven Concurrency; enables interrupts
